# NetworksLab2019

./: CMakeLists.txt
libs/: chatty.c  chatty.h
task1/: README.txt
task1/client/: Makefile  client  client.c
task4/: build.gradle
task4/src/main/kotlin/: Main.kt
task4/src/main/kotlin/koin/: App.kt
task4/src/main/kotlin/model/: Host.kt
task4/src/main/kotlin/model/commans/: Command.kt
task4/src/main/kotlin/model/shop/: Goods.kt  Response.kt
task4/src/main/kotlin/services/: ArgsParser.kt  CommandParser.kt  CommandsService.kt  OnlineShopService.kt  ShopService.kt
task4/src/main/kotlin/services/impl/: ArgsParserImpl.kt  CommandParserImpl.kt  CommandsServiceImpl.kt  OnlineShopServiceImpl.kt  ShopServiceImpl.kt
task4/src/main/kotlin/utils/: PacketBuilder.kt  PacketParser.kt
task5/: build.gradle  settings.gradle
task5/src/main/kotlin/: Main.kt
task5/src/main/kotlin/extensions/: Int.kt
task5/src/main/kotlin/koin/: App.kt
task5/src/main/kotlin/model/: Article.kt  Command.kt  Node.kt  Response.kt
task5/src/main/kotlin/services/: ArgsParser.kt  ClientHandler.kt  CommandsHandler.kt  InformationSystem.kt  Store.kt
task5/src/main/kotlin/services/impl/: ArgsParserImpl.kt  ClientHandlerImpl.kt  CommandHandlerImpl.kt  InformationSystemImpl.kt  StoreImpl.kt
task5/src/main/kotlin/utils/: PacketBuilder.kt  PacketParser.kt
